deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accommodation
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accommodation
  template:
    metadata:
      labels:
        app: accommodation
    spec:
      containers:
        - name: springboot-container
          image: rahmafira/accommodation:REPLACE_ME_TAG
          ports:
            - containerPort: 8080
