service.yml
apiVersion: v1
kind: Service
metadata:
  name: accommodation-service
  namespace: default
spec:
  selector:
    app: accommodation
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
